add job titles, responsibilities and css styling

--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Collin Chapman</h1>
-  <p class="address">2348 SE Salmon St. | Portland, OR 97214 | 574-536-0247| cchap14@gmail.com<p>
+  <p class="address">2348 SE Salmon St. | Portland, OR 97214 | 574-536-0247 | cchap14@gmail.com<p>
   <h3>Planning Experience</h3>
   <p> 
     <span class="place">Precision Castparts Corporation, SSBO</span> - Portland, OR
@@ -33,8 +33,44 @@
       </ul>
     </div>
 
-
+    <span class="title">Senior Production Planner</span>
+    <span class="date">April 2016 - April 2017</span>
+    <div class="responsibilities">
+      <ul>
+        <li>Managed multi-department scheduling and throughput by setting requisite priorities and calculating short-term and medium-term production capacities</li>
+        <li>Served as liaison between Operations and Customer Service Planners to achieve ship commits of critical military defense programs</li>
+        <li>Developed and implemented training classes for internal employees covering Microsoft Excel and PCC’s 3rd party web-based reporting program, WebFOCUS.</li>
+        <li>Performed descriptive analytics to evaluate areas of improvement and prescriptive analytics to determine the best course of action</li>
+      </ul>
+    </div>
   </p>
+  
+  <h3>Business Analysis Experience</h3>
+  <p>
+    <span class="place">Precision Castparts Corporation, SSBO</span> - Portland, OR
+    <br>
+    <span class="title">Manufacturing Analyst</span>
+    <span class="date">August 2014 - April 2016</span>
+    <div class="responsibilities">
+      <ul>
+        <li>Recorded and interpreted data to assemble ad hoc reporting for plant inventory levels and throughput activity</li>
+        <li>Designed and maintained three databases vital to daily operations of the SSBO plant, using macros and query</li>
+        <li>Completed periodic business analysis to identify trends, constraints and opportunities</li>
+      </ul>
+    </div>
+    <span class="place">Indiana University Kelley School Of Business</span> - Bloomington, IN
+    <br>
+    <span class="title">Peer Tutor - Computer in Business</span>
+    <span class="date">January 2011 - August 2013</span>
+    <div class="responsibilities">
+      <ul>
+        <li>Recorded and interpreted data to assemble ad hoc reporting for plant inventory levels and throughput activity</li>
+        <li>Instructed a lab of 30 students twice a week, assisting students with their understanding of Microsoft Access and Excel </li>
+        <li>Oversaw peer review sessions twice a month, taking a lead role in Q&A sessions and one-on-one teaching opportunities</li>
+      </ul>
+    </div>
+  </p>
+
 
 </body>
 </html>
