add education and additional information

--- a/resume.html
+++ b/resume.html
@@ -9,8 +9,7 @@
   <p class="address">2348 SE Salmon St. | Portland, OR 97214 | 574-536-0247 | cchap14@gmail.com<p>
   <h3>Planning Experience</h3>
   <p> 
-    <span class="place">Precision Castparts Corporation, SSBO</span> - Portland, OR
-    <br>
+    <span class="place">Precision Castparts Corporation, SSBO - Portland, OR</span>
     <span class="title">Master Schedule Supervisor | SOX Auditor</span> 
     <span class="date">August 2019 - Current</span>
     <div class="responsibilities">
@@ -47,8 +46,7 @@
   
   <h3>Business Analysis Experience</h3>
   <p>
-    <span class="place">Precision Castparts Corporation, SSBO</span> - Portland, OR
-    <br>
+    <span class="place">Precision Castparts Corporation, SSBO - Portland, OR</span>
     <span class="title">Manufacturing Analyst</span>
     <span class="date">August 2014 - April 2016</span>
     <div class="responsibilities">
@@ -58,8 +56,7 @@
         <li>Completed periodic business analysis to identify trends, constraints and opportunities</li>
       </ul>
     </div>
-    <span class="place">Indiana University Kelley School Of Business</span> - Bloomington, IN
-    <br>
+    <span class="place">Indiana University Kelley School Of Business - Bloomington, IN</span>
     <span class="title">Peer Tutor - Computer in Business</span>
     <span class="date">January 2011 - August 2013</span>
     <div class="responsibilities">
@@ -67,6 +64,40 @@
         <li>Recorded and interpreted data to assemble ad hoc reporting for plant inventory levels and throughput activity</li>
         <li>Instructed a lab of 30 students twice a week, assisting students with their understanding of Microsoft Access and Excel </li>
         <li>Oversaw peer review sessions twice a month, taking a lead role in Q&A sessions and one-on-one teaching opportunities</li>
+      </ul>
+    </div>
+  </p>
+
+  <h3>Education</h3>
+  <p>
+    <span class="place">Epicodus - Portland, OR</span>
+    <span class="title">Certificate in Web Development</span>
+    <span class="date">Current</span>
+    <br>
+    <span class="place">Portland State University Center for Executive and Professional Education  - Portland, OR</span>
+    <span class="title">Certified in Data Analytics</span>
+    <span class="date">June 2020</span>
+    <br>
+    <span class="place">American Production and Inventory Control Society (APICS)  - Portland, OR</span>
+    <span class="title">Certified in Production and Inventory Management</span>
+    <span class="date">June 2018</span>
+    <br>
+    <span class="place">Indiana University, School of Public Health  - Bloomington, IN</span>
+    <span class="title">Bachelor of Science in Kinesiology, GPA: 3.6/4.0</span>
+    <span class="date">August 2013</span>
+    Major: Sport Marketing and Management
+    <br>
+    Minors: Business, Japanese Language
+  </p>
+
+  <h3>Additional</h3>
+  <p>
+    <div class="responsibilities">
+      <ul>
+        <li>Software proficiency: Visual Basic for Application <strong>(VBA)</strong>, <strong>PostgreSQL</strong>, Microsoft (<strong>Excel, Access, Power BI, Word, PowerPoint</strong>), Adobe Lightroom, <strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong></li>
+        <li>Intermediate reading, writing and speaking proficiency in <strong>Japanese</strong>; member of Japan-America Society of Oregon (<strong>JASO</strong>) </li>
+        <li>Completed a 5,418 km motorbike journey through the countryside, jungles, seaside and remote villages of Vietnam</li>
+        <li>Interests include backpacking, playing and coaching basketball, playing keyboard, reading, and cooking</li>
       </ul>
     </div>
   </p>
